@@ -58,6 +58,7 @@ final class HintsBuffer
 
     private final ConcurrentMap<UUID, Queue<Integer>> offsets;
     private final OpOrder appendOrder;
+    private final ConcurrentMap<UUID, Long> earliestHintByHost; // Stores time of earliest hint in the buffer for each host
 
     private HintsBuffer(ByteBuffer slab)
     {
@@ -66,6 +67,7 @@ final class HintsBuffer
         position = new AtomicLong();
         offsets = new ConcurrentHashMap<>();
         appendOrder = new OpOrder();
+        earliestHintByHost = new ConcurrentHashMap<>();
     }
 
     static HintsBuffer create(int slabSize)
@@ -139,6 +141,21 @@ final class HintsBuffer
                 return (ByteBuffer) flyweight.clear().position(offset).limit(offset + totalSize);
             }
         };
+    }
+
+    /**
+     * Retrieve the time of the earliest hint in the buffer for a specific node
+     * @param hostId UUID of the node
+     * @return timestamp for the earliest hint in the buffer, or {@link System#currentTimeMillis()}
+     */
+    long getEarliestHintTime(UUID hostId)
+    {
+        return earliestHintByHost.getOrDefault(hostId, System.currentTimeMillis());
+    }
+
+    void clearEarliesHintForHostId(UUID hostId)
+    {
+        earliestHintByHost.remove(hostId);
     }
 
     @SuppressWarnings("resource")
@@ -222,8 +239,13 @@ final class HintsBuffer
         void write(Iterable<UUID> hostIds, Hint hint)
         {
             write(hint);
+            long ts = System.currentTimeMillis();
             for (UUID hostId : hostIds)
+            {
+                // We only need the time of the first hint in the buffer
+                earliestHintByHost.putIfAbsent(hostId, ts);
                 put(hostId, offset);
+            }
         }
 
         public void close()
