@@ -17,6 +17,7 @@
  */
 package org.apache.cassandra.hints;
 
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -30,6 +31,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.junit.runner.RunWith;
 
 import com.datastax.driver.core.utils.MoreFutures;
 import org.apache.cassandra.SchemaLoader;
@@ -48,14 +50,18 @@ import org.apache.cassandra.net.MockMessagingService;
 import org.apache.cassandra.net.MockMessagingSpy;
 import org.apache.cassandra.schema.KeyspaceParams;
 import org.apache.cassandra.service.StorageService;
+import org.jboss.byteman.contrib.bmunit.BMRule;
+import org.jboss.byteman.contrib.bmunit.BMUnitRunner;
 
 import static org.apache.cassandra.Util.dk;
 import static org.apache.cassandra.net.Verb.HINT_REQ;
 import static org.apache.cassandra.net.Verb.HINT_RSP;
 import static org.apache.cassandra.net.MockMessagingService.verb;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
 
+@RunWith(BMUnitRunner.class)
 public class HintsServiceTest
 {
     private static final String KEYSPACE = "hints_service_test";
@@ -180,6 +186,43 @@ public class HintsServiceTest
         InputPosition dispatchOffset = store.getDispatchOffset(descriptor);
         assertTrue(dispatchOffset != null);
         assertTrue(((ChecksummedDataInput.Position) dispatchOffset).sourcePosition > 0);
+    }
+
+    // BM rule to get the timestamp that was used to store the hint so that we avoid any flakiness in timestamps between
+    // when we send the hint and when it actually got written.
+    static volatile long timestampForHint = 0L;
+    @Test
+    @BMRule(name = "GetHintTS",
+            targetClass="HintsBuffer$Allocation",
+            targetMethod="write(Iterable, Hint)",
+            targetLocation="AFTER INVOKE putIfAbsent",
+            action="org.apache.cassandra.hints.HintsServiceTest.timestampForHint = $ts")
+    public void testEarliestHint() throws InterruptedException
+    {
+        // create and write noOfHints using service
+        UUID hostId = StorageService.instance.getLocalHostUUID();
+        TableMetadata metadata = Schema.instance.getTableMetadata(KEYSPACE, TABLE);
+
+        long ts = System.currentTimeMillis();
+        DecoratedKey dkey = dk(String.valueOf(1));
+        PartitionUpdate.SimpleBuilder builder = PartitionUpdate.simpleBuilder(metadata, dkey).timestamp(ts);
+        builder.row("column0").add("val", "value0");
+        Hint hint = Hint.create(builder.buildAsMutation(), ts);
+        HintsService.instance.write(hostId, hint);
+        long oldestHintTime = timestampForHint;
+        Thread.sleep(1);
+        HintsService.instance.write(hostId, hint);
+        Thread.sleep(1);
+        HintsService.instance.write(hostId, hint);
+
+        // Close and fsync so that we get the timestamp from the descriptor rather than the buffer.
+        HintsStore store = HintsService.instance.getCatalog().get(hostId);
+        HintsService.instance.flushAndFsyncBlockingly(Collections.singletonList(hostId));
+        store.closeWriter();
+
+        long earliest = HintsService.instance.getEarliestHintForHost(hostId);
+        assertEquals(oldestHintTime, earliest);
+        assertNotEquals(oldestHintTime, timestampForHint);
     }
 
     private MockMessagingSpy sendHintsAndResponses(int noOfHints, int noOfResponses)
